add_executable(test0 test0.cpp)
target_link_libraries(test0 base reactor)

add_executable(test1 test1.cpp)
target_link_libraries(test1 base reactor)

add_executable(test2 test2.cpp)
target_link_libraries(test2 base reactor)

add_executable(test3 test3.cpp)
target_link_libraries(test3 base reactor)

add_executable(test4 test4.cpp)
target_link_libraries(test4 base reactor)